Fixed alignment - Reignier

--- a/Landing_Page.css
+++ b/Landing_Page.css
@@ -24,6 +24,8 @@ body {
     justify-content: space-between;
     padding: 8px 20px;
     background: black;
+    width: 100%;
+    padding: 8px 20px;
 }
 
 
@@ -61,6 +63,7 @@ body {
     list-style: none;
     display: flex;
     gap: 18px;
+    align-items: center;
 }
 
 .nav-links a {
@@ -69,6 +72,7 @@ body {
     justify-content: center;
     text-decoration: none;
     color: white;
+    gap: 18px;
     padding: 6px 6px;
     transition: 0.3s;
 }
@@ -108,6 +112,22 @@ body {
 
 .nav-links a:hover {
     color: #90BADA;
+}
+
+.button {
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    background-color: #90BADA;
+    color: #ffffff;
+    width: 100px;
+    height: 30px;
+    transition: 0.3s;
+    border-radius: 10px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 
